--- a/Micael_Rosario/produto.html
+++ b/Micael_Rosario/produto.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Produto - Destak Modas</title>
-    <link rel="stylesheet" href="/css/produto.css">
+    <link rel="stylesheet" href="css/produto.css">
 </head>
 <body>
     <header class="header">
@@ -19,19 +19,19 @@
                 <h3>Moda Masculina</h3>
                 <div class="itens-container">
                     <div class="item">
-                        <img src="/imagens/Produto/sueter.jpg" alt="Sueter Masculino">
+                        <img src="imagens/Produto/sueter.jpg" alt="Sueter Masculino">
                         <p>Sueter Detalhado Masculino com Zíper</p>
                         <p>R$54,90</p>
                         <button type="submit">COMPRAR</button>
                     </div>
                     <div class="item s">
-                        <img src="/imagens//Produto/calca.jfif" alt="">
+                        <img src="imagens//Produto/calca.jfif" alt="">
                         <p>Calça de Sarja Masculina Slim Fit</p>
                         <p>R$62,90</p>
                         <button type="submit">COMPRAR</button>
                     </div>
                     <div class="item">
-                        <img src="/imagens/Produto/corta-vento.webp" alt="">
+                        <img src="imagens/Produto/corta-vento.webp" alt="">
                         <p>Corta Vento Masculina Impermeável Semi Forrada</p>
                         <p>R$49,90</p>
                         <button type="submit">COMPRAR</button>
@@ -42,19 +42,19 @@
                 <h3>Moda Feminina</h3>
                 <div class="itens-container">
                     <div class="item">
-                        <img src="/imagens/Produto/jaquetaF.webp" alt="Sueter Masculino">
+                        <img src="imagens/Produto/jaquetaF.webp" alt="Sueter Masculino">
                         <p>Jaqueta Básica Feminina</p>
                         <p>R$54,90</p>
                         <button type="submit">COMPRAR</button>
                     </div>
                     <div class="item">
-                        <img src="/imagens//Produto/legg.jpg" alt="">
+                        <img src="imagens//Produto/legg.jpg" alt="">
                         <p>Calça Legging Lupo Original Max</p>
                         <p>R$62,90</p>
                         <button type="submit">COMPRAR</button>
                     </div>
                     <div class="item">
-                        <img src="/imagens/Produto/vestido.jpg" alt="">
+                        <img src="imagens/Produto/vestido.jpg" alt="">
                         <p>Vestido Feminino Lovito </p>
                         <p>R$49,90</p>
                         <button type="submit">COMPRAR</button>
@@ -65,19 +65,19 @@
                 <h3>Roupas Infantis</h3>
                 <div class="itens-container">
                     <div class="item">
-                        <img src="/imagens/Produto/conjSocial.jpg" alt="Sueter Masculino">
+                        <img src="imagens/Produto/conjSocial.jpg" alt="Sueter Masculino">
                         <p>Conjunto Social Infantil</p>
                         <p>R$54,90</p>
                         <button type="submit">COMPRAR</button>
                     </div>
                     <div class="item">
-                        <img src="/imagens//Produto/moletom.webp" alt="">
+                        <img src="imagens//Produto/moletom.webp" alt="">
                         <p>Moletom New York Infantil </p>
                         <p>R$62,90</p>
                         <button type="submit">COMPRAR</button>
                     </div>
                     <div class="item">
-                        <img src="/imagens/Produto/tenis.webp" alt="">
+                        <img src="imagens/Produto/tenis.webp" alt="">
                         <p>Tênis Nike Infantil Preto-Branco</p>
                         <p>R$49,90</p>
                         <button type="submit">COMPRAR</button>
