agora tá pronto

--- a/Micael_Rosario/contato.html
+++ b/Micael_Rosario/contato.html
@@ -12,6 +12,14 @@
         <p>O Melhor da Moda em Um Só Lugar</p>
     </header>
 
+    <nav class="topnav">
+        <a href="index.html">Home</a>
+        <a href="sobreNos.html">Sobre Nós</a>
+        <a href="produto.html">Produtos</a>
+        <a href="servicos.html">Serviços</a>
+        <a href="contato.html" class="contato">Contato</a>
+    </nav>
+
     <main class="container">
         <h2>Contato</h2>
         <form action="index.html" class="flex" method="post">
