--- a/Micael_Rosario/index.html
+++ b/Micael_Rosario/index.html
@@ -16,6 +16,7 @@
   </header>
 
   <nav class="topnav">
+    <a href="index.html">Home</a>
     <a href="sobreNos.html">Sobre Nós</a>
     <a href="produto.html">Produtos</a>
     <a href="servicos.html">Serviços</a>
