--- a/Micael_Rosario/produto.html
+++ b/Micael_Rosario/produto.html
@@ -12,6 +12,14 @@
         <p>O Melhor da Moda em Um Só Lugar</p>
     </header>
 
+    <nav class="topnav">
+        <a href="index.html">Home</a>
+        <a href="sobreNos.html">Sobre Nós</a>
+        <a href="produto.html">Produtos</a>
+        <a href="servicos.html">Serviços</a>
+        <a href="contato.html" class="contato">Contato</a>
+      </nav>
+
     <main class="container">
         <h2>SHOPPING</h2>
         <div class="flex">
